# newSmartContracts

./: .gitignore
russfest/: go.mod  go.sum  schema.yaml
russfest/go/: main.go
russfest/go/russfest/: consts.go  contract.go  eventhandlers.go  events.go  params.go  results.go  state.go  structs.go
russfest/go/russfestimpl/: funcs.go  thunks.go
russfest/rs/russfest/: Cargo.toml  README.md
russfest/rs/russfest/src/: consts.rs  contract.rs  eventhandlers.rs  events.rs  lib.rs  params.rs  results.rs  state.rs  structs.rs
russfest/rs/russfestimpl/: Cargo.toml  README.md
russfest/rs/russfestimpl/src/: funcs.rs  thunks.rs
russfest/rs/russfestwasm/: Cargo.toml  README.md
russfest/rs/russfestwasm/src/: lib.rs
russfest/test/: russfest_test.go
russfest/ts/: main.ts
russfest/ts/russfest/: consts.ts  contract.ts  eventhandlers.ts  events.ts  index.ts  package.json  params.ts  results.ts  state.ts  structs.ts
russfest/ts/russfestimpl/: funcs.ts  index.ts  thunks.ts
shop1/: schema.yaml
shop1/rs/shop1/: Cargo.toml  README.md
shop1/rs/shop1/src/: consts.rs  contract.rs  lib.rs  params.rs  results.rs  state.rs  structs.rs
shop1/rs/shop1impl/: Cargo.toml  README.md
shop1/rs/shop1impl/src/: funcs.rs  thunks.rs
shop1/rs/shop1wasm/: Cargo.toml  README.md
shop1/rs/shop1wasm/src/: lib.rs
shop1/test/: shop1_test.go
