[package]
name = "shop1wasm"
description = "Wasm VM host stub for: shop1 description"
license = ""
version = "0.0.1"
authors = [""]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
shop1impl = { path = "../shop1impl" }
wasmvmhost = { git = "https://github.com/iotaledger/wasp", branch = "develop" }
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
